# Test_llvm_compiler

./: README.md
.github/workflows/: c-cpp.yml
Kalido-comp/: CMakeLists.txt
Kalido-comp/include/: lexer.h  parser.h  token.h
Kalido-comp/inputs/: input1.txt  input2.txt
Kalido-comp/src/: lexer.cpp  main.cpp  parser.cpp
